RESOLVED FIXED303408
[macOS][Site Isolation] WebContent processes in frames always have a foreground assertion
https://bugs.webkit.org/show_bug.cgi?id=303408
Summary [macOS][Site Isolation] WebContent processes in frames always have a foregrou...
Per Arne Vollan
Reported 2025-12-02 11:53:43 PST
WebContent processes in frames always have a foreground assertion on macOS with Site Isolation enabled.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-02 11:53:50 PST
Per Arne Vollan
Comment 2 2025-12-02 11:56:23 PST
EWS
Comment 3 2025-12-03 06:24:40 PST
Committed 303829@main (69d1cd411a6d): <https://commits.webkit.org/303829@main> Reviewed commits have been landed. Closing PR #54715 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.