[macOS][Site Isolation] WebContent processes in frames always have a foreground assertion https://bugs.webkit.org/show_bug.cgi?id=303408 rdar://165710553

Reviewed by Ben Nham.

WebContent processes in frames always have a foreground assertion on macOS with Site Isolation enabled,
even when the page is not visible. This is because the lifetime activity is never dropped for these
processes.

* Source/WebKit/UIProcess/RemotePageProxy.cpp:
(WebKit::RemotePageProxy::injectPageIntoNewProcess):
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::didFinishLaunching):

Canonical link: https://commits.webkit.org/303829@main